welcome.lessons.welcome.array.notriples.NoTriples.scala.error
noTriples:10: error: not found: value num
    deu=num(l-1)
        ^noTriples:11: error: not found: value num
    pre=num(l-2)
        ^